<resources>
    <string name="app_name">Собери свой ПК</string>
    <string name="shop">Магазин</string>
    <string name="builds">Ваши сборки</string>
    <string name="info">Информация</string>
    <string name="motherboards">Материнские платы</string>
    <string name="CPUs">Процессоры</string>
    <string name="GPUs">Видеокарты</string>
    <string name="HDDs">Накопители HDD</string>
    <string name="SSDs">Накопители SSD</string>
    <string name="RAMs">Память</string>
    <string name="power_supplies">Блоки питания</string>і
    <string name="status">Статус :</string>
    <string name="not_complete">Не закончена</string>
    <string name="complete">Закончена</string>
    <string name="cpu">Процессор</string>
    <string name="motherboard_reduction">Мат. плата</string>
    <string name="gpu">Видеокарта</string>
    <string name="ram_reduction">ОЗУ</string>
    <string name="hdd">Жесткий диск</string>
    <string name="ssd">SSD</string>
    <string name="power_supply">Блок питания</string>
    <string name="not_chosen">Не выбрано</string>
    <string name="description">Описание :</string>
    <string name="motherboard">Материнская плата</string>
    <string name="storage">Жетский диски / SSD :</string>
    <string name="ram">Оперативная память</string>
    <string name="go_brain_com">Go brain.com.ua</string>
    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="plus">+</string>
    <string name="build_desc">Описание сборки</string>
    <string name="build_name">Имя сборки</string>
    <string name="other">Другое</string>
    <string name="false_compatibility">Сборка несовместима</string>
    <string name="true_compatibility">Сборка совместима</string>
    <string name="pc_cases">Корпусы</string>
    <string name="pc_case">Корпус</string>
    <string name="add_favorite">+ в избранное</string>
    <string name="in_build">Уже в сборке</string>
    <string name="not_found_any_goods">К сожелению по этому запросу ничего не найдено</string>
    <string name="component_price">%1$d грн</string>
    <string name="characteristics">Характеристики</string>
    <string name="not_compatibility">Не совместима</string>
    <string name="track_price">Отслеживаемая цена:</string>
    <string name="price">цена</string>

    <string name="add_to_favorite">+ в избранное</string>
    <string name="delete_from_favorite">удалить из избранного</string>
    <string name="add_to_build">+ в сборку</string>
    <string name="filters">Фильтры</string>
    <string name="accept">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="sort">Сортировка:</string>

    <string name="wrong_cpu_socket">Сокет процессора не соответствует сокету материнской платы</string>
    <string name="wrong_ram_type">Мат. плата не поддерживает данный тип ОЗУ</string>
    <string name="wrong_ram_size">Мат. плата не поддерживает такой объём ОЗУ</string>
    <string name="wrong_ram_count">Мат. плата не поддерживает данное количество модулей ОЗУ</string>
    <string name="wrong_case_form_factor">Корпус не поддерживает форм фактор материнской платы</string>
    <string name="wrong_sata_count">Мат. плата не поддерживает данное количество SATA портов</string>
    <string name="wrong_m2_count">Мат. плата не поддерживает данное количество M2 портов</string>
    <string name="not_enough_ps_power">Недостаточная мощность блока питания</string>

    <string name="price_low_to_high">От дешевых к дорогим</string>
    <string name="price_high_to_low">От дорогих к дешевым</string>
    <string name="publish">Опубликовать</string>
    <string name="enter_username">Введите имя пользователя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="authorization">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="enter_secret_word">Введите секретное слово</string>
    <string name="login">Логин</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="already_have_an_account">Уже есть аккаунт ?</string>
    <string name="invalid_auth_data">Поля должны содержать только буквы, цифры или символ нижнего подчеркивания</string>
    <string name="pass_do_not_match">Введенные пароли не совпадают</string>
    <string name="username_exists">Пользователь с таким именем уже существует</string>
    <string name="google_acc_already_used">Данный аккаунт Гугл уже используется</string>
    <string name="incorrect_login_or_password">Неправильный логин или пароль</string>
    <string name="no_connection">No connection with our server, try later</string>
    <string name="internal_server_error">Internal server error, try later</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="incorrect_fields_length">Минимум 6 символов</string>
    <string name="don_t_have_an_account">Еще нету аккаунта ? </string>
    <string name="components">Комплектующие</string>
    <string name="user_builds">Польз. сборки</string>
    <string name="save_on_server">Сохранить на сервере</string>
    <string name="build_will_be_saved_on_server">После публикации сборку невозможно будет изменить и она будет видна всем пользователям. Вы хотите её опубликовать ?</string>
    <string name="build_must_be_completed">Для публикации сборки, необходимо чтобы она была закончена, а так же полностью совместима</string>
    <string name="exit">Выход</string>
    <string name="accept_delete">Данная сборка будет удалена с аккаунта (если привязана к нему) и с устройства. Вы точно хотите её удалить ?</string>
    <string name="user">Пользователь :</string>
    <string name="creator">Создатель :</string>
    <string name="answer">Ответить</string>
    <string name="comments">%1$d комментария</string>
    <string name="loading_comments">Загрузка комментариев…</string>
    <string name="compatibility_filter">Фильтр по совместимсоти</string>
    <string name="cannot_add_more">Невозможно добавить больше</string>
    <string name="change_profile_image">Изменить изображение</string>
    <string name="password">Пароль</string>
    <string name="username">Никнейм</string>
    <string name="settings">Найстройки</string>
    <string name="enter_current_password">Введите текущий пароль</string>
    <string name="invalid_username">Имя пользователя должно быть не меньше 6 символов и содержать буквы, цифры или символ нижнего подчеркивания</string>
    <string name="Google_account">Google аккаунт</string>
    <string name="login_success">Успешный вход</string>
    <string name="logout_success">Вы вышли из аккаунта</string>
    <string name="favourite">Избранное</string>
    <string name="search____">Поиск ...</string>
    <string name="forget_password">Забыли пароль ?</string>
    <string name="enter_new_pass">Введите новый пароль</string>
    <string name="send_new_pass">Отправить</string>
    <string name="incorrect_username_or_secret_word">Неверный никнейм или секретное слово. Проверьте введенные данные</string>
    <string name="enter_value_to_the_field">Заполните поле</string>
    <string name="success_change_password">Пароль изменен</string>
    <string name="delete_from_build">Удалить из сборки</string>
    <string name="build_not_found">Сборка не найдена</string>
    <string name="link_copied">Ссылка скопирована</string>
    <string name="configurator">Конфигуратор</string>
    <string name="you_must_be_authorized">Вы должны быть авторизированы</string>
</resources>