<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.9"
    android:layout_marginTop="5dp"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:weightSum="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_motherboard"
                style="@style/ButtonCategory"
                android:text="@string/motherboards"
                app:icon="@drawable/ic_motherboard_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_cpu"
                style="@style/ButtonCategory"
                android:text="@string/CPUs"
                app:icon="@drawable/ic_cpu_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_gpu"
                style="@style/ButtonCategory"
                android:text="@string/GPUs"
                app:icon="@drawable/ic_gpu_24" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_hdd"
                style="@style/ButtonCategory"
                android:text="@string/HDDs"
                app:icon="@drawable/ic_hdd_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_ssd"
                style="@style/ButtonCategory"
                android:text="@string/SSDs"
                app:icon="@drawable/ic_ssd_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_ram"
                style="@style/ButtonCategory"
                android:text="@string/RAMs"
                app:icon="@drawable/ic_ram_24"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_power_supply"
                style="@style/ButtonCategory"
                android:text="@string/power_supplies"
                app:icon="@drawable/ic_power_supply_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_search_component_case"
                style="@style/ButtonCategory"
                android:text="@string/pc_cases"
                app:icon="@drawable/ic_case_24" />

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonCategory"
                android:visibility="invisible"
                android:text=""
                app:icon="@drawable/ic_gpu_24"/>

        </TableRow>

    </TableLayout>

</ScrollView>