<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/icon_img"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_login_et_username"
            style="@style/auth_field"
            android:hint="@string/enter_username"
            android:drawableStart="@drawable/ic_user_24"
            android:inputType="text"/>

        <EditText
            android:id="@+id/fragment_login_et_password"
            style="@style/auth_field"
            android:hint="@string/enter_password"
            android:drawableStart="@drawable/ic_key_24"
            android:inputType="textPassword"/>


    </LinearLayout>

    <android.widget.Button
        android:id="@+id/fragment_login_bt_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/button_border_blue"/>

    <android.widget.Button
        android:id="@+id/fragment_login_google_sign_in"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_with_google"
        android:textColor="#4284f5"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_google_24"
        android:background="@drawable/button_border_white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/fragment_login_tv_to_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:text="@string/register"
            android:textSize="16sp"
            android:textColor="@color/light_blue"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>