<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.9"
    android:weightSum="1"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/fragment_full_data_img"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="0.3"
                    android:src="@drawable/ic_processor_24"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/fragment_build_full_et_name_build"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        android:layout_margin="2dp"
                        android:hint="@string/build_name"
                        android:gravity="start|center"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:textSize="20sp"
                        android:textColor="@color/turquoise"/>


                    <TextView
                        android:id="@+id/fragment_build_full_tv_price"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"
                        android:layout_margin="2dp"
                        android:text="X XXX ГРН"
                        android:textSize="20sp"
                        android:gravity="start|center"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:textColor="@color/green"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/status"
                            android:gravity="start|center"
                            android:textSize="16sp"
                            android:paddingStart="20dp"
                            android:paddingEnd="0dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/fragment_build_full_tv_complete_status"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/not_complete"
                            android:gravity="center"
                            android:textSize="16sp"

                            android:textColor="@color/red"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_build_full_ll_full_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/fragment_build_full_tv_compatibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/red"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:textColor="@color/turquoise"/>

                <EditText
                    android:id="@+id/fragment_build_full_et_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/build_desc"
                    android:layout_marginBottom="15dp"/>

                <Button
                    style="@style/block_header"
                    android:text="@string/cpu"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_cpu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/motherboard"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_mb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/gpu"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_gpu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/ram"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_ram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/hdd"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_hdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/ssd"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_ssd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/power_supply"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_power_supply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

                <Button
                    style="@style/block_header"
                    android:text="@string/pc_case"
                    android:drawableEnd="@drawable/ic_arrow_right_36"/>

                <LinearLayout
                    android:id="@+id/fragment_build_full_ll_case"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        style="@style/find_good_bt"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/fragment_build_full_menu_bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        app:menu="@menu/bottom_navigation_build_full"
        style="@style/Widget.Design.BottomNavigationView"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:background="@color/main_theme_1"/>

</LinearLayout>