<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/csn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            style="@style/auth_field"
            android:hint="@string/enter_username"
            android:drawableStart="@drawable/ic_user_24"/>

        <EditText
            style="@style/auth_field"
            android:hint="@string/enter_password"
            android:drawableStart="@drawable/ic_key_24"/>


    </LinearLayout>

    <android.widget.Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:background="@drawable/button_border_blue"/>

    <android.widget.Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Sign in with Google"
        android:textColor="#4284f5"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_google_24"
        android:background="@drawable/button_border_white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Don't have an account? "
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textColor="@color/light_blue"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>