<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="30dp"
    android:weightSum="1">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.7"
        android:src="@drawable/icon_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forget_pass_et_username"
            style="@style/auth_layout_field"
            app:startIconDrawable="@drawable/ic_user_24">

            <EditText
                style="@style/auth_field"
                android:hint="@string/enter_username"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forget_pass_et_secret"
            style="@style/auth_layout_field"
            app:startIconDrawable="@drawable/ic_top_secret_24">

            <EditText
                style="@style/auth_field"
                android:hint="@string/enter_secret_word"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forget_pass_et_new_pass"
            style="@style/auth_layout_field"
            app:startIconDrawable="@drawable/ic_key_24">

            <EditText
                style="@style/auth_field"
                android:hint="@string/enter_new_pass"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <android.widget.Button
            android:id="@+id/fragment_forget_pass_bt_accept"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.7"
            android:background="@drawable/transition_light_blue_border"
            android:text="@string/send_new_pass"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>